--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,18 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+*,::after,::before{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: 'Lobster', cursive;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: white;
+  /* background: rgb(0,0,0); */
+/* background: linear-gradient(90deg, rgba(0,0,0,1) 23%, rgba(36,36,36,1) 54%, rgba(98,98,98,1) 67%, rgba(127,127,127,1) 83%, rgba(255,255,255,1) 100%); */
+background-color: #2d3436;
+background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%);
 }
 
 code {
